# sistema-distribuido-contador-colaborativo

./: README.md  build-log.txt  docker-compose.yml  logger.cpp  logger.h
client/: CMakeLists.txt  Makefile  Makefile.Debug  Makefile.Release  build.bat  build.sh  client.pro  client.py  client_resource.rc  requirements.txt
client/input_files/: exemplo.txt  exemplo_cpp.txt
client/src/: fileprocessor.cpp  fileprocessor.h  httpclient.cpp  httpclient.h  main.cpp  mainwindow.cpp  mainwindow.h
master/: CMakeLists.txt  Dockerfile
master/src/: logger.h  main.cpp  master_server.cpp  master_server.h
slave_letters/: CMakeLists.txt  Dockerfile
slave_letters/src/: letters_server.cpp  letters_server.h  main.cpp
slave_numbers/: CMakeLists.txt  Dockerfile
slave_numbers/src/: logger.cpp  main.cpp  numbers_server.cpp  numbers_server.h
